force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement_History__c/BMCServiceDesk__BMC_BaseElement_History__c.object-meta.xml
<CustomObject>
    <description>Stores the data that tracks the history of all actions that have been performed on configuration items.</description>
    <label>Configuration Item History</label>
    <nameField>
        <label>BMC_BaseElement History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Item Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>