force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement_History__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <description>This field stores the description related to the Configuration Item</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>