force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement_History__c/fields/BMCServiceDesk__FKBMC_BaseElement__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
    <label>Configuration Item</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>BMC_BaseElement Histories</relationshipLabel>
    <relationshipName>BMC_BaseElement_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>