force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement_History__c/fields/BMCServiceDesk__FKCreated_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCreated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BMC_BaseElement_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>