force-app/main/default/objects/BMCServiceDesk__BMC_BaseElement_History__c/fields/BMCServiceDesk__Note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Note__c</fullName>
    <description>This field stores the data to allow users to enter in notes</description>
    <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>